[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "1-1"
path = "src/1/1/main.rs"


[[bin]]
name = "1-2"
path = "src/1/2/main.rs"

[[bin]]
name = "2-1"
path = "src/2/1/main.rs"

[[bin]]
name = "2-2"
path = "src/2/2/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
